--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -195,10 +195,6 @@
 		"message": "сжать HTML-контент",
 		"description": "Options page label: 'compress HTML content'"
 	},
-	"optionInsertTextBody": {
-		"message": "make text searchable",
-		"description": "Options page label: 'make text searchable'"
-	},
 	"optionRemoveImports": {
 		"message": "удалить HTML-импорт",
 		"description": "Options page label: 'remove HTML imports'"
@@ -210,6 +206,18 @@
 	"optionRemoveHiddenElements": {
 		"message": "удалить скрытые элементы",
 		"description": "Options page label: 'remove hidden elements'"
+	},
+	"optionsZipContentSubTitle": {
+		"message": "ZIP content",
+		"description": "Options page label: 'ZIP content'"
+	},
+	"optionCreateRootDirectory": {
+		"message": "create a root directory",
+		"description": "Options page label: 'create a root directory'"
+	},
+	"optionInsertTextBody": {
+		"message": "make text searchable",
+		"description": "Options page label: 'make text searchable'"
 	},
 	"optionsImagesSubTitle": {
 		"message": "Изображения",
