--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -215,6 +215,10 @@
         "message": "create a root directory",
         "description": "Options page label: 'create a root directory'"
     },
+    "optionSelfExtractingArchive": {
+        "message": "crear archivos autoextraíbles",
+        "description": "Options page label: 'create self extracting archives'"
+    },
     "optionInsertTextBody": {
         "message": "hacer buscable el texto",
         "description": "Options page label: 'make text searchable'"
