--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -215,6 +215,10 @@
         "message": "create a root directory",
         "description": "Options page label: 'create a root directory'"
     },
+    "optionSelfExtractingArchive": {
+        "message": "create self extracting archives",
+        "description": "Options page label: 'create self extracting archives'"
+    },
     "optionInsertTextBody": {
         "message": "使文本可被搜索",
         "description": "Options page label: 'make text searchable'"
