--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -7,6 +7,10 @@
         "message": "Zapisz stronę z SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+    "menuSaveWithProfile": {
+		"message": "Save page with profile",
+		"description": "Menu entry: 'Save with profile'"
+	},	
     "menuSaveSelectedLinks": {
         "message": "Zapisz wybrane odnośniki",
         "description": "Menu entry: 'Save selected links'"
