--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -8,9 +8,9 @@
 		"description": "Menu entry: 'Save page with SingleFileZ'"
 	},
 	"menuSaveWithProfile": {
-		"message": "Save page with profile",
+		"message": "Сохранить с профилем",
 		"description": "Menu entry: 'Save with profile'"
-	},	
+	},
 	"menuSaveSelectedLinks": {
 		"message": "Сохранить выбранные ссылки",
 		"description": "Menu entry: 'Save selected links'"
@@ -164,7 +164,7 @@
 		"description": "Options page label: 'template'"
 	},
 	"optionFilenameMaxLength": {
-		"message": "максимальная длина (байты)",
+		"message": "максимальная длина (байт)",
 		"description": "Options page label: 'max length (bytes)'"
 	},
 	"optionConfirmFilename": {
@@ -219,10 +219,10 @@
 		"message": "create a root directory",
 		"description": "Options page label: 'create a root directory'"
 	},
-    "optionSelfExtractingArchive": {
-        "message": "create self extracting archives",
-        "description": "Options page label: 'create self extracting archives'"
-    },
+	"optionSelfExtractingArchive": {
+		"message": "create self extracting archives",
+		"description": "Options page label: 'create self extracting archives'"
+	},
 	"optionInsertTextBody": {
 		"message": "make text searchable",
 		"description": "Options page label: 'make text searchable'"
@@ -384,7 +384,7 @@
 		"description": "Options page label: 'save pages in background'"
 	},
 	"optionDisplayStats": {
-		"message": "показать статистику в консоли после обработки",
+		"message": "показывать статистику в консоли после обработки",
 		"description": "Options page label: 'display stats in the console after processing'"
 	},
 	"optionSetMaxResourceSize": {
