added translation of extension hotkeys

--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -3,6 +3,14 @@
         "message": "Web ページを自己解凍型の HTML / ZIP ハイブリッドファイルとして保存する",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Save the current tab or the selected content",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "すべてのタブを保存",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "SingleFileZ でページを保存",
         "description": "Menu entry: 'Save page with SingleFileZ'"
