--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -3,6 +3,14 @@
         "message": "Speichern von Webseiten als selbstentpackende HTML/ZIP-Hybriddateien",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Speichern der aktuellen Tab oder des ausgewählten Inhalts",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "Speichern aller Tabs",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "Speichern einer Webseite mit SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
