--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,6 +3,14 @@
         "message": "Save web pages as self-extracting HTML/ZIP hybrid files",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Save the current tab or the selected content",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "Save all tabs",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "Save page with SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
