--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -3,6 +3,14 @@
         "message": "Guarda páginas web como archivos híbridos HTML/ZIP auto-extraíbles",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Guardar la pestaña actual o el contenido seleccionado",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "Guardar todas las pestañas",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "Guardar página con SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
