--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -3,6 +3,14 @@
         "message": "Sauvegardez vos pages web sous forme de fichier hybride HTML/ZIP",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Sauver l'onglet courant ou le contenu sélectionné",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "Sauver tous les onglets",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "Sauver la page avec SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
