--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -3,6 +3,14 @@
         "message": "Zapisuj strony internetowe jako samorozpakowujące się hybrydowe pliki HTML/ZIP.",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Save the current tab or the selected content",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "Zapisz wszystkie karty",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "Zapisz stronę z SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
