--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -3,6 +3,14 @@
 		"message": "охранение веб-страниц в виде самораспаковывающихся гибридных файлов HTML/ZIP",
 		"description": "Description of the extension."
 	},
+    "commandSaveTab": {
+        "message": "Save the current tab or the selected content",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "Сохранить все вкладки",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
 	"menuSavePage": {
 		"message": "Сохранить страницу с помощью SingleFileZ",
 		"description": "Menu entry: 'Save page with SingleFileZ'"
