--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -3,6 +3,14 @@
         "message": "將頁面保存到自解壓式 HTML/ZIP 混合文件中",
         "description": "Description of the extension."
     },
+    "commandSaveTab": {
+        "message": "Save the current tab or the selected content",
+        "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
+    },
+    "commandSaveAllTabs": {
+        "message": "保存所有標籤頁",
+        "description": "Command (Ctrl+Shift+U): 'Save all tabs'"
+    },
     "menuSavePage": {
         "message": "使用 SingleFileZ 保存頁面",
         "description": "Menu entry: 'Save page with SingleFileZ'"
