--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -4,7 +4,7 @@
         "description": "Description of the extension."
     },
     "commandSaveTab": {
-        "message": "保存所选标签页或选中部分",
+        "message": "保存当前标签页或选中部分",
         "description": "Command (Ctrl+Shift+Y): 'Save the current tab or the selected content'"
     },
     "commandSaveAllTabs": {
@@ -52,7 +52,7 @@
         "description": "Menu entry (SingleFileZ button only): 'Save tabs'"
     },
     "menuSaveSelectedTabs": {
-        "message": "保存所选标签页",
+        "message": "保存当前标签页",
         "description": "Menu entry: 'Save selected tabs'"
     },
     "menuSaveUnpinnedTabs": {
