Updated Polish translation

--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -16,7 +16,7 @@
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
     "menuSaveWithProfile": {
-		"message": "Save page with profile",
+		"message": "Zapisz stronę z profilem",
 		"description": "Menu entry: 'Save with profile'"
 	},	
     "menuSaveSelectedLinks": {
